--- a/head.html
+++ b/head.html
@@ -18,7 +18,7 @@
                 <li><a href="#">Profile</a></li>
                 <li><a href="#">Profile</a></li>
             </ul>
-            <img src="DDD.jpg" width=50px>
+            <img src="DDD.jpg" width=50px height=60px>
         </nav>
     </div>
 </body>
