--- a/head.html
+++ b/head.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -16,8 +16,9 @@
                 <li><a href="#">Assets</a></li>
                 <li><a href="#">Utility</a></li>
                 <li><a href="#">Profile</a></li>
+                <li><a href="#">Profile</a></li>
             </ul>
-            <img src="DDD.jpg" class="user-pic">
+            <img src="DDD.jpg" width=50px>
         </nav>
     </div>
 </body>
