--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
       <div class="icon">
       <span class="material-icons-sharp">add</span>
       </div>
-      <h3>Add Product</h3>
+      <h3>Add Product best products</h3>
       </div>
       </div>
       </div>
